--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -4,11 +4,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_main"
-    app:startDestination="@id/productsFragment">
+    app:startDestination="@id/addProductFragment">
 
     <fragment
         android:id="@+id/productsFragment"
-        android:name="br.com.multalpha.aplicativos.v1.appbikes.ui.products.ProductsFragment"
+        android:name="br.com.multalpha.aplicativos.v1.whitelabel.ui.products.ProductsFragment"
         android:label="@string/products_screen_title"
         tools:layout="@layout/fragment_products">
         <action
@@ -17,7 +17,7 @@
     </fragment>
     <dialog
         android:id="@+id/addProductFragment"
-        android:name="br.com.multalpha.aplicativos.v1.appbikes.ui.addproduct.AddProductFragment"
+        android:name="br.com.multalpha.aplicativos.v1.whitelabel.ui.addproduct.AddProductFragment"
         android:label="@string/add_product_screen_title"
         tools:layout="@layout/add_product_fragment" />
 </navigation>
