--- a/app/src/main/res/layout/add_product_fragment.xml
+++ b/app/src/main/res/layout/add_product_fragment.xml
@@ -66,6 +66,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
+        android:backgroundTint="@color/purple_700"
+        android:textColor="@color/white"
         android:text="@string/add_product_button_add_product"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
