Projeto White Label com Flavors Adm/Client

--- a/app/src/bike/res/values/themes.xml
+++ b/app/src/bike/res/values/themes.xml
@@ -13,16 +13,21 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimary</item>
         <!-- Customize your theme here. -->
     </style>
-    <style name="text" parent="TextAppearance.AppCompat">
+    <style name="Text" parent="TextAppearance.AppCompat">
         <item name="android:textStyle">bold</item>
     </style>
 
-    <style name="text.Primary">
+    <style name="Text.Primary">
         <item name="android:textColor">@color/black</item>
     </style>
 
-    <style name="text.Secondary">
+    <style name="Text.Secondary">
         <item name="android:textColor">?attr/colorPrimaryVariant</item>
+    </style>
+
+    <style name="Text.Error">
+        <item name="android:textColor">?attr/colorError</item>
+        <item name="android:textSize">22sp</item>
     </style>
 
     <style name="Theme.WhiteLabel.NoActionBar">
